--- a/wally.toml
+++ b/wally.toml
@@ -5,7 +5,11 @@ registry = "https://github.com/UpliftGames/wally-index"
 realm = "shared"
 
 [dependencies]
-Roact = "roblox/roact@1.4.4"
 Knit = "sleitnick/knit@1.7.0"
+Cmdr = "evaera/cmdr@1.12.0"
+Trove = "sleitnick/trove@1.5.1"
+Observers = "sleitnick/observers@0.3.4"
+T = "osyrisrblx/t@3.1.1"
 
 [server-dependencies]
+ProfileStore = "lm-loleris/profilestore@1.0.3"
