Loading screen, client loader, server loader

--- a/default.project.json
+++ b/default.project.json
@@ -3,6 +3,10 @@
   "tree": {
     "$className": "DataModel",
 
+    "ReplicatedFirst": {
+      "$path": "src/ReplicatedFirst"
+    },
+
     "ReplicatedStorage": {
       "Packages": {
         "$className": "Configuration",
