--- a/wally.toml
+++ b/wally.toml
@@ -9,7 +9,10 @@ Knit = "sleitnick/knit@1.7.0"
 Cmdr = "evaera/cmdr@1.12.0"
 Trove = "sleitnick/trove@1.5.1"
 Observers = "sleitnick/observers@0.3.4"
-T = "osyrisrblx/t@3.1.1"
+Type = "osyrisrblx/t@3.1.1"
+Component = "sleitnick/component@2.4.8"
+Promise = "evaera/promise@4.0.0"
+Throttle = "neond00m/throttle@0.3.0"
 
 [server-dependencies]
 ProfileStore = "lm-loleris/profilestore@1.0.3"
